[gd_scene load_steps=48 format=3 uid="uid://d0114hue5afig"]

[ext_resource type="Script" path="res://Scenes/Player/player.gd" id="1_ckos7"]
[ext_resource type="Texture2D" uid="uid://cn5ta6p0r0w23" path="res://Ninja Adventure - Asset Pack/Actor/Characters/NinjaRed2/SeparateAnim/Walk.png" id="2_6abnm"]
[ext_resource type="Texture2D" uid="uid://cjqsynoq8sm27" path="res://Ninja Adventure - Asset Pack/Actor/Characters/NinjaRed2/SeparateAnim/Attack.png" id="2_ncxfy"]
[ext_resource type="Texture2D" uid="uid://ciw5hm24ykbtv" path="res://Ninja Adventure - Asset Pack/Items/Treasure/GoldCoin.png" id="3_kh661"]
[ext_resource type="Texture2D" uid="uid://1tb73w10jdq3" path="res://Ninja Adventure - Asset Pack/Actor/Characters/NinjaRed2/SpriteSheet.png" id="3_xjtpo"]
[ext_resource type="Texture2D" uid="uid://dbgddfv6l13cl" path="res://Ninja Adventure - Asset Pack/Ui/LifeReceptacle/heart.png" id="4_qhv5f"]
[ext_resource type="Texture2D" uid="uid://bvnp33f1aih4t" path="res://Ninja Adventure - Asset Pack/Items/Weapons/Sai/Sprite.png" id="5_2jjxr"]
[ext_resource type="AudioStream" uid="uid://1sqjqqh1vpro" path="res://Ninja Adventure - Asset Pack/Sounds/Game/GameOver2.wav" id="8_vrtuw"]
[ext_resource type="AudioStream" uid="uid://c2nun0xd00xgx" path="res://Ninja Adventure - Asset Pack/Sounds/Game/Kill.wav" id="9_nwh74"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r3qo8"]
atlas = ExtResource("2_ncxfy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4apx1"]
atlas = ExtResource("2_ncxfy")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgsft"]
atlas = ExtResource("2_ncxfy")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gf17c"]
atlas = ExtResource("2_ncxfy")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i13h5"]
atlas = ExtResource("3_xjtpo")
region = Rect2(0, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds6hb"]
atlas = ExtResource("2_6abnm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0qv5d"]
atlas = ExtResource("2_6abnm")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_adtut"]
atlas = ExtResource("2_6abnm")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf7a5"]
atlas = ExtResource("2_6abnm")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4wn4"]
atlas = ExtResource("2_6abnm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aorum"]
atlas = ExtResource("2_6abnm")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wlmm4"]
atlas = ExtResource("2_6abnm")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tn0vd"]
atlas = ExtResource("2_6abnm")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxj4j"]
atlas = ExtResource("2_6abnm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidro"]
atlas = ExtResource("2_6abnm")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_obbfv"]
atlas = ExtResource("2_6abnm")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qfykb"]
atlas = ExtResource("2_6abnm")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vtg2m"]
atlas = ExtResource("2_6abnm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7566p"]
atlas = ExtResource("2_6abnm")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsmad"]
atlas = ExtResource("2_6abnm")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub1pl"]
atlas = ExtResource("2_6abnm")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_iiu05"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3qo8")
}],
"loop": true,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4apx1")
}],
"loop": true,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgsft")
}],
"loop": true,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gf17c")
}],
"loop": true,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i13h5")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds6hb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0qv5d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adtut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf7a5")
}],
"loop": true,
"name": &"move_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4wn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aorum")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wlmm4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tn0vd")
}],
"loop": true,
"name": &"move_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxj4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obbfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qfykb")
}],
"loop": true,
"name": &"move_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vtg2m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7566p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsmad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub1pl")
}],
"loop": true,
"name": &"move_up",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_leu41"]
radius = 5.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v0ra3"]
size = Vector2(10, 9)

[sub_resource type="CircleShape2D" id="CircleShape2D_3slh8"]
radius = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_c65el"]
font_size = 36

[sub_resource type="AtlasTexture" id="AtlasTexture_58c16"]
atlas = ExtResource("4_qhv5f")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ux0eb"]
atlas = ExtResource("4_qhv5f")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5dac"]
atlas = ExtResource("4_qhv5f")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyr10"]
atlas = ExtResource("4_qhv5f")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_l41u0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58c16")
}],
"loop": true,
"name": &"0_hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ux0eb")
}],
"loop": true,
"name": &"1_hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5dac")
}],
"loop": true,
"name": &"2_hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oyr10")
}],
"loop": true,
"name": &"3_hp",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ein6"]
size = Vector2(10, 14.5)

[sub_resource type="Animation" id="Animation_88hhi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, 4)]
}

[sub_resource type="Animation" id="Animation_1g3wh"]
resource_name = "attack_down"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, 9)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.93041, 4.05615]
}

[sub_resource type="Animation" id="Animation_n4cdp"]
resource_name = "attack_left"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-7, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4.45583, 5.45764]
}

[sub_resource type="Animation" id="Animation_xiauq"]
resource_name = "attack_right"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(9, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.174533, 1.85179]
}

[sub_resource type="Animation" id="Animation_uilid"]
resource_name = "attack_up"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, 1.39626]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sword:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-3, -9)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wjuk5"]
_data = {
"RESET": SubResource("Animation_88hhi"),
"attack_down": SubResource("Animation_1g3wh"),
"attack_left": SubResource("Animation_n4cdp"),
"attack_right": SubResource("Animation_xiauq"),
"attack_up": SubResource("Animation_uilid")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_ckos7")
move_speed = 60.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_iiu05")
animation = &"move_down"
autoplay = "move_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_leu41")

[node name="InteractArea2D" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea2D"]
shape = SubResource("RectangleShape2D_v0ra3")
debug_color = Color(0.843847, 0.757993, 0, 0.42)

[node name="HitboxArea2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxArea2D"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_3slh8")
debug_color = Color(0.960784, 0, 0, 0.419608)

[node name="Canvas" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="Canvas"]
offset_left = 67.0
offset_top = 13.0
offset_right = 183.0
offset_bottom = 64.0

[node name="TreasureLabel" type="Label" parent="Canvas/Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 77.0
offset_bottom = 51.0
text = "0"
label_settings = SubResource("LabelSettings_c65el")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="TextureRect" type="TextureRect" parent="Canvas/Panel"]
layout_mode = 0
offset_left = 69.0
offset_top = 3.0
offset_right = 112.0
offset_bottom = 46.0
texture = ExtResource("3_kh661")

[node name="HPBar" type="AnimatedSprite2D" parent="Canvas"]
unique_name_in_owner = true
position = Vector2(37, 35)
scale = Vector2(3.3125, 3.3125)
sprite_frames = SubResource("SpriteFrames_l41u0")
animation = &"0_hp"

[node name="Sword" type="Sprite2D" parent="."]
visible = false
position = Vector2(9, 4)
texture = ExtResource("5_2jjxr")
offset = Vector2(0, -5)

[node name="SwordArea2D" type="Area2D" parent="Sword"]
unique_name_in_owner = true
position = Vector2(0, 5)
collision_layer = 2
collision_mask = 16
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/SwordArea2D"]
position = Vector2(0, -10.75)
shape = SubResource("RectangleShape2D_6ein6")
debug_color = Color(5.77569e-07, 0.527832, 0.17352, 0.42)

[node name="AttackDurationTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wjuk5")
}

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_vrtuw")
volume_db = -10.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_nwh74")
volume_db = -15.0

[connection signal="body_entered" from="InteractArea2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="InteractArea2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="HitboxArea2D" to="." method="_on_hitbox_area_2d_body_entered"]
[connection signal="body_entered" from="Sword/SwordArea2D" to="." method="_on_sword_area_2d_body_entered"]
[connection signal="timeout" from="AttackDurationTimer" to="." method="_on_attack_duration_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
